http-challenge/ingress-triumpheduconsultants-com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: randeerdil
  name: randeerdil
  namespace: terraform
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.triumpheduconsultants.com
    http:
      paths:
      - backend:
          service:
            name: randeerdil
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - k8s.triumpheduconsultants.com
    secretName: triumpheduconsultants-com-tls
